23. Enable song notifications n Linux builds without QtDBus.
24. Speed-up MPD response parsing, by only converting strings to UTF-8 when
    required.
25. In Albums view, always show album name as main text and artist as sub-text
    regardless of chosen sort.
26. When context view is collpased, draw background over selector buttons.

1.3.3
-----
1. If Cantata is started whilst an instance is also running, raise window of
   current instance. (Linux only fix)
2. Add song to playqueue from albums page when double-clicked.

1.3.2
-----
 1. In cover/artist dialog, when attempting to save an image into Cantata's
    cache folder - ensure the 'covers' sub-folder is created.
 2. When saving artist image from cover dialog, if set to save in MPD folder and
    song's path does not have 2 folder elements then save in cache folder.
    Cantata will only save artist images, and backdrops, in MPD folder if the
    folder structure is (e.g.) Artist/Album/Track.mp3
 3. Use case-insensitive sort of folder view items when adding to playqueue.
 4. When determining the 'basic' artist of a track, if albumartist is set and
    artist is not, then use albumartist.
 5. For the web-links in the context view, replace ampersand and question mark
    characters in artist names with the relevant URL encoding.
 6. Use CMake to locate X11 libraries and headers.
 7. Set minimum size for initial settings wizard.
 8. If buddy of a checkbox or radio is clicked, then toggle check or radio.
 9. Disable context-view cancel actions until a job is created.
10. When searching models, also search composer field.
11. Fix enabling of "Initially collapse albums" in playlists settings tab.
12. Fix grouped playlist view initial state when set to initially collapse
    albums.
13. Fix calculating size of song files when copying off a device that has been
    previously scanned, and its contents cached.
14. When copying from a CD, check that we have enough space for track that was