@@ -42,6 +42,9 @@
 25. In Albums view, always show album name as main text and artist as sub-text
     regardless of chosen sort.
 26. When context view is collpased, draw background over selector buttons.
+27. Be consistent with displaying year's of albums - year is shown in brackets
+    after album name.
+28. Only show album year in non-icon view.
 
 1.3.3
 -----
